fix: hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ code {
 
 .sidebar {
   flex: 3;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 50vh;
 }
 
